--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
+    <script
+      src="https://kit.fontawesome.com/98d3d9aa54.js"
+      crossorigin="anonymous"
+    ></script>
+
         <!-- =====BOX ICONS===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
@@ -23,6 +28,8 @@
                     <li class="navitem2"><a href="#about" class="about">About</a></li>
                     <li class="navitem3"><a href="#skills" class="projects">Skills</a></li>
                     <li class="navitem4"><a href="#contact" class="contact">Contact</a></li>
+                    <li><a><i class="fas fa-moon btn-toggle"></i></a></li>
+                    
                 </ul>
             </section>
            
